# chessdemo

./: .gitignore  CLAUDE.md  gradlew  gradlew.bat  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_chessdemo_ai_StockfishEngine.cpp  com_jnz_chess_ai_StockfishEngine.cpp
app/src/main/java/com/chessdemo/: MainActivity.kt
app/src/main/java/com/chessdemo/ai/: BookProvider.kt  CompositeOpeningBookProvider.kt  JsonOpeningBookProvider.kt  OpeningBook.kt  OpeningBookProvider.kt  PolyglotBook.kt  StockfishAI.kt  StockfishEngine.kt
app/src/main/java/com/chessdemo/domain/: ChessEngine.kt  GameResult.kt  GameState.kt  GameTree.kt  Move.kt  Piece.kt
app/src/main/java/com/chessdemo/ui/: AiEngineManager.kt  BoardEditor.kt  ClockEngineManager.kt  GameModes.kt  GameScreen.kt  GameViewModel.kt
app/src/main/java/com/chessdemo/ui/components/: CapturedPiecesView.kt  ChessBoard.kt  ClockView.kt  ControlBar.kt  Dialogs.kt  MoveList.kt  ThinkingPanel.kt
app/src/main/java/com/chessdemo/ui/theme/: Theme.kt
app/src/main/java/com/chessdemo/ui/util/: BoardColors.kt  MoveFeedback.kt  PgnUtils.kt  StockfishInfoFormatter.kt
app/src/main/java/com/jnz/chess/: MainActivity.kt
app/src/main/java/com/jnz/chess/ai/: BookProvider.kt  CompositeOpeningBookProvider.kt  JsonOpeningBookProvider.kt  OpeningBook.kt  OpeningBookProvider.kt  PolyglotBook.kt  StockfishAI.kt  StockfishEngine.kt
app/src/main/java/com/jnz/chess/domain/: ChessEngine.kt  GameResult.kt  GameState.kt  GameTree.kt  Move.kt  Piece.kt
app/src/main/java/com/jnz/chess/ui/: AiEngineManager.kt  BoardEditor.kt  ClockEngineManager.kt  GameModes.kt  GameScreen.kt  GameViewModel.kt
app/src/main/java/com/jnz/chess/ui/components/: CapturedPiecesView.kt  ChessBoard.kt  ClockView.kt  ControlBar.kt  Dialogs.kt  MoveList.kt  ThinkingPanel.kt
app/src/main/java/com/jnz/chess/ui/theme/: Theme.kt
app/src/main/java/com/jnz/chess/ui/util/: BoardColors.kt  MoveFeedback.kt  PgnUtils.kt  StockfishInfoFormatter.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/chessdemo/ai/: PolyglotBookTest.kt
app/src/test/java/com/chessdemo/domain/: ChessEngineTest.kt  GameResultTest.kt  GameStateTest.kt  GameTreeTest.kt  MoveTest.kt  PieceTest.kt
app/src/test/java/com/jnz/chess/ai/: PolyglotBookTest.kt
app/src/test/java/com/jnz/chess/domain/: ChessEngineTest.kt  GameResultTest.kt  GameStateTest.kt  GameTreeTest.kt  MoveTest.kt  PieceTest.kt
tools/: generate_book.py
